--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -69,3 +69,12 @@
   display: flex;
   flex-direction: column-reverse;
 }
+#savebutton {
+  padding: 12px 0;
+  color: #fff;
+  background-color: #10a37f;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
+}
